# greeting-apps

./: README.md  pyproject.toml
src/: greet.py  main.py
