[tool.poetry]
name = "greeting-apps"
version = "0.1.0"
description = "Greeting Apps to Typer Demo"
authors = ["perymerdeka"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
